--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -37,10 +37,11 @@
     "@ng-select/ng-select": "^7.4.0",
     "@stomp/ng2-stompjs": "^7.2.0",
     "@swimlane/ngx-graph": "^7.1.2",
-    "@taiga-ui/cdk": "^2.26.0",
-    "@taiga-ui/core": "^2.26.0",
-    "@taiga-ui/icons": "^2.26.0",
-    "@taiga-ui/kit": "^2.26.0",
+    "@taiga-ui/cdk": "^2.63.0",
+    "@taiga-ui/core": "^2.63.0",
+    "@taiga-ui/icons": "^2.63.0",
+    "@taiga-ui/kit": "^2.63.0",
+    "@taiga-ui/i18n": "^2.63.0",
     "@tinkoff/ng-dompurify": "3.0.0",
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^26.2.0",
