--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -74,9 +74,9 @@
     "path": "^0.12.7",
     "postcss": "^8.4.5",
     "process": "^0.11.10",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-flow-renderer": "^10.3.16",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "reactflow": "^11.0.0",
     "rich-markdown-editor": "^11.21.3",
     "rxjs": "^6.5.0",
     "stream": "0.0.2",
