--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -39,9 +39,9 @@
     "@swimlane/ngx-graph": "^7.1.2",
     "@taiga-ui/cdk": "^2.63.0",
     "@taiga-ui/core": "^2.63.0",
+    "@taiga-ui/i18n": "^2.63.0",
     "@taiga-ui/icons": "^2.63.0",
     "@taiga-ui/kit": "^2.63.0",
-    "@taiga-ui/i18n": "^2.63.0",
     "@tinkoff/ng-dompurify": "3.0.0",
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^26.2.0",
@@ -72,6 +72,7 @@
     "ngx-moment": "^3.4.0",
     "npm": "^6.14.5",
     "path": "^0.12.7",
+    "plausible-tracker": "^0.3.8",
     "postcss": "^8.4.5",
     "process": "^0.11.10",
     "react": "^17.0.2",
