--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -364,6 +364,7 @@ build-helm:
 .terraform-deploy:
    extends: .terraform:deploy
    before_script:
+      - echo ${TF_ROOT}
       - cd ${TF_ROOT}
       - gitlab-terraform plan
       - gitlab-terraform plan-json
