--- a/taxi-playground/pom.xml
+++ b/taxi-playground/pom.xml
@@ -27,6 +27,10 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-webflux</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
 
       <dependency>
          <groupId>org.taxilang</groupId>
