--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -7,6 +7,7 @@
     "build": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build",
     "start-dev": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --configuration dev",
     "build-prod": "ng build --configuration production",
+    "build-prod-voyager": "ng build --configuration production taxi-playground",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -43,6 +44,7 @@
     "@taiga-ui/icons": "^2.63.0",
     "@taiga-ui/kit": "^2.63.0",
     "@tinkoff/ng-dompurify": "3.0.0",
+    "@tinkoff/ng-event-plugins": "3.0.0",
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^26.2.0",
     "ag-grid-community": "^26.2.0",
