--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -403,3 +403,15 @@ terraform-deploy-dev-taxi-playground:
    rules:
       - when: manual
 
+terraform-deploy-prod-taxi-playground:
+   extends: .terraform-deploy
+   environment:
+      name: $TF_STATE_NAME_PROD
+   variables:
+      TF_ROOT: ${CI_PROJECT_DIR}/taxi-playground/terraform/environments/$TF_STATE_NAME_PROD
+      TF_STATE_NAME: taxi_playground_$TF_STATE_NAME_PROD
+      TF_VAR_environment: $TF_STATE_NAME_PROD
+      TF_VAR_taxi_playground_docker_image_id: $CI_COMMIT_SHORT_SHA
+   rules:
+      - when: manual
+
