--- a/taxi-playground/pom.xml
+++ b/taxi-playground/pom.xml
@@ -15,6 +15,7 @@
       <maven.compiler.source>11</maven.compiler.source>
       <maven.compiler.target>11</maven.compiler.target>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <aws-sdk.version>2.17.290</aws-sdk.version>
    </properties>
 
    <dependencies>
@@ -30,6 +31,14 @@
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-registry-cloudwatch2</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>software.amazon.awssdk</groupId>
+         <artifactId>regions</artifactId>
       </dependency>
 
       <dependency>
@@ -54,6 +63,18 @@
          </exclusions>
       </dependency>
    </dependencies>
+
+   <dependencyManagement>
+      <dependencies>
+         <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>bom</artifactId>
+            <version>${aws-sdk.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
 
    <build>
       <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
