--- a/taxi-playground/pom.xml
+++ b/taxi-playground/pom.xml
@@ -20,6 +20,15 @@
 
    <dependencies>
       <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-data-jpa</artifactId>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-query-api</artifactId>
          <version>${project.version}</version>
@@ -50,6 +59,14 @@
          <groupId>io.vyne</groupId>
          <artifactId>vyne-core-types</artifactId>
          <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.postgresql</groupId>
+         <artifactId>postgresql</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.flywaydb</groupId>
+         <artifactId>flyway-core</artifactId>
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
@@ -92,6 +109,7 @@
                </args>
                <compilerPlugins>
                   <plugin>spring</plugin>
+                  <plugin>jpa</plugin>
                </compilerPlugins>
                <sourceDirs>
                   <sourceDir>src/main/java</sourceDir>
