--- a/taxi-playground/src/main/resources/application.yml
+++ b/taxi-playground/src/main/resources/application.yml
@@ -15,3 +15,24 @@ hubspot:
       voyager-updates-id: 57677525
       general-marketing: 58020439
 
+spring:
+   flyway:
+      enabled: true
+      url: ${spring.datasource.url}
+      user: ${spring.datasource.username}
+      password: ${spring.datasource.password}
+      locations: classpath:postgres
+
+   jpa:
+      database-platform: org.hibernate.dialect.PostgreSQL95Dialect
+      properties:
+         hibernate:
+            dialect: org.hibernate.dialect.PostgreSQL95Dialect
+
+   datasource:
+      url: "jdbc:postgresql://${DB_HOST}:${DB_PORT}/voyager"
+      username: ${DB_USERNAME}
+      password: ${DB_PASSWORD}
+      driver: "org.postgresql.Driver"
+      driverClassName: org.postgresql.Driver
+
