--- a/pipelines/pipeline-jet/pom.xml
+++ b/pipelines/pipeline-jet/pom.xml
@@ -269,7 +269,16 @@
          <version>1.12.321</version>
          <scope>test</scope>
       </dependency>
+
+      <dependency>
+         <groupId>io.github.hakky54</groupId>
+         <artifactId>logcaptor</artifactId>
+         <version>2.7.10</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
+
+
 
    <dependencyManagement>
       <dependencies>
