--- a/jwt-auth-server/pom.xml
+++ b/jwt-auth-server/pom.xml
@@ -12,13 +12,20 @@
    <artifactId>jwt-auth-server</artifactId>
 
    <properties>
-      <keycloak.version>11.0.3</keycloak.version>
+      <keycloak.version>19.0.3</keycloak.version>
       <!-- these should be updated together with Keycloak -->
       <!-- check keycloak-dependencies-server-all effective pom -->
-      <infinispan.version>10.1.8.Final</infinispan.version>
-      <resteasy.version>3.15.3.Final</resteasy.version>
+      <infinispan.version>12.1.7.Final</infinispan.version>
+      <resteasy.version>4.7.4.Final</resteasy.version>
+      <liquibase.version>4.8.0</liquibase.version>
+      <h2.version>1.4.197</h2.version>
    </properties>
    <dependencies>
+      <dependency>
+         <groupId>org.keycloak</groupId>
+         <artifactId>keycloak-crypto-default</artifactId>
+         <version>${keycloak.version}</version>
+      </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
@@ -39,7 +46,7 @@
       <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
-         <version>2.1.214</version>
+         <version>${h2.version}</version>
       </dependency>
 
       <!-- Keycloak server -->
