--- a/jwt-auth-server/src/main/resources/application.yml
+++ b/jwt-auth-server/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-   port: 8080
+   port: 8088
 
 spring:
    datasource:
       username: sa
-      url: jdbc:h2:mem:testdb
+      url: jdbc:h2:mem:authdb
 
 keycloak:
    server:
