--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -43,6 +43,8 @@
     "@taiga-ui/i18n": "^2.63.0",
     "@taiga-ui/icons": "^2.63.0",
     "@taiga-ui/kit": "^2.63.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
     "@tinkoff/ng-dompurify": "3.0.0",
     "@tinkoff/ng-event-plugins": "3.0.0",
     "@types/angular": "^1.7.0",
@@ -75,7 +77,6 @@
     "npm": "^6.14.5",
     "path": "^0.12.7",
     "plausible-tracker": "^0.3.8",
-    "postcss": "^8.4.5",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -121,6 +122,7 @@
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "@webcomponents/custom-elements": "^1.5.0",
+    "autoprefixer": "^10.4.12",
     "babel-loader": "^8.0.6",
     "cypress": "^8.2.0",
     "cypress-file-upload": "^5.0.8",
@@ -135,7 +137,9 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "postcss": "^8.4.18",
     "protractor": "~7.0.0",
+    "tailwindcss": "^3.1.8",
     "ts-node": "~5.0.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslint": "~6.1.0",
