Get rid of the detached pipelines.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -472,7 +472,9 @@ terraform-deploy-dev-voyager:
       TF_VAR_environment: $TF_STATE_NAME_DEV
       TF_VAR_taxi_playground_docker_image_id: $CI_COMMIT_SHORT_SHA
    rules:
-      - when: manual
+      -  when: manual
+      -  if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+         when: never
 
 terraform-deploy-prod-voyager:
    extends: .terraform-deploy
@@ -485,5 +487,7 @@ terraform-deploy-prod-voyager:
       TF_VAR_environment: $TF_STATE_NAME_PROD
       TF_VAR_taxi_playground_docker_image_id: $CI_COMMIT_SHORT_SHA
    rules:
-      - when: manual
+      -  when: manual
+      -  if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+         when: never
 
