--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,11 @@ stages:
 default:
    tags:
       - docker
+workflow:
+   rules:
+      -  if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+         when: never
+      -  when: always
 
 .build-jvm:
    stage: build
